syntax = "proto3";

package contactsapi.company;
option java_multiple_files = true;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

message CreateCompanyRequest {
    string name = 1;
    // TODO: does create have a mask?..
    google.protobuf.FieldMask field_mask = 2;
}

message GetCompanyRequest {
    string id = 1;
    google.protobuf.FieldMask field_mask = 2;
}

message ListCompaniesRequest {
    google.protobuf.FieldMask field_mask = 2;
}

message GetCompaniesRequest {
    string page_token = 1;
    int32 page_size = 2;
    google.protobuf.FieldMask field_mask = 3;
}

message UpdateCompanyRequest {
    string id = 1;
    string name = 2;
    google.protobuf.FieldMask update_mask = 3;
}

message DeleteCompanyRequest {
    string id = 1;
}

message CompanyResponse {
    string id = 1;
    string name = 2;
    int32 version = 3;// TODO: Should this be a string or a int32?
}

message ListCompaniesResponse {
    repeated CompanyResponse companies = 1;
    string next_page_token = 2;
    int32 count = 3;
}

service CompanyService {
    rpc CreateCompany(CreateCompanyRequest) returns (CompanyResponse) {
        option (google.api.http) = {
            post: "/v1/companies"
            body: "*"
        };
    };

    rpc GetCompany(GetCompanyRequest) returns (CompanyResponse) {
        option (google.api.http) = {
            get: "/v1/companies/{id}"
        };
    };

    rpc ListCompanies(ListCompaniesRequest) returns (ListCompaniesResponse) {
        option (google.api.http) = {
            get: "/v1/companies"
        };
    };

    rpc UpdateCompany(UpdateCompanyRequest) returns (CompanyResponse) {
        option (google.api.http) = {
            get: "/v1/companies/{id}"
        };
    };

    rpc DeleteCompany(DeleteCompanyRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/companies/{id}"
        };
    };
}
